--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ endif()
 LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 
 find_package(OpenCV REQUIRED)
+find_package(OpenPose REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(Pangolin REQUIRED)
 find_package(Boost  1.54.0  	     # Minimum or EXACT version e.g. 1.36.0
@@ -38,12 +39,15 @@ find_package(Boost  1.54.0  	     # Minimum or EXACT version e.g. 1.36.0
 #set(realsense2_INCLUDE_DIRS "C:\\Program Files (x86)\\Intel RealSense SDK 2.0\\lib\\x64")          # TODO: Update this variable to correct path - folder where realsense2.lib is found
 #set(DLL_DIR "C:\\Program Files (x86)\\Intel RealSense SDK 2.0\\bin\\x64")
 find_package(realsense2 REQUIRED)
+find_package(OpenPose REQUIRED)
 
 #add_subdirectory(Thirdparty/DBoW2)
 
 include_directories(
 ${PROJECT_SOURCE_DIR}
 ${PROJECT_SOURCE_DIR}/include
+${OPENCV_INCLUDE_DIR}
+${OPENPOSE_INCLUDE_DIRS}
 ${EIGEN3_INCLUDE_DIR}
 ${Pangolin_INCLUDE_DIRS}
 ${realsense2_INCLUDE_DIRS}
@@ -72,11 +76,12 @@ src/Sim3Solver.cc
 src/Initializer.cc
 src/Viewer.cc
 src/ArucoDetect.cpp
-include/ArucoDetect.h)
+src/DetectHumanPose.cpp)
 
 target_link_libraries(${PROJECT_NAME}
 ${OpenCV_LIBS}
 ${EIGEN3_LIBS}
+${OpenPose_LIBS}
 ${PROJECT_SOURCE_DIR}/Thirdparty/DBoW2/lib/libDBoW2.so
 ${Pangolin_LIBRARIES}
 ${PROJECT_SOURCE_DIR}/Thirdparty/g2o/lib/libg2o.so
