--- a/Examples/Setting.yaml
+++ b/Examples/Setting.yaml
@@ -3,6 +3,9 @@
 #--------------------------------------------------------------------------------------------
 # The Settings of ORB-SLAM2 Monocular. Adjust them!
 #--------------------------------------------------------------------------------------------
+# Source of video (/dev/video*) (ip camera) (etc.)
+
+Video_source: /dev/video3
 
 # the Orb Vocabulary File Path. Either .bin File or .txt File is Ok.
   
@@ -14,7 +17,7 @@ Cam_Setting: /home/skaegy/Projects/Cplus_Project/ORB_Tracking/Examples/ORB_RGB64
 
 # Whether Run the ORB-SLAM2 System Using the Exsiting Map File (0 for no , 1 for yes).
 
-is_ReuseMap: 0
+is_ReuseMap: 1
 
 # the Exsiting Map File Path (if the above item is 0, this is unnessesary)
 
@@ -23,5 +26,13 @@ ReuseMap: /home/skaegy/Projects/Cplus_Project/ORB_Tracking/Examples/Monocular/Sl
 # the Aruco Parameters File Path
 
 Aruco_Parameters: /home/skaegy/Projects/Cplus_Project/ORB_Tracking/Examples/detector_params.yml
+
+# the Openpose parameters File Path
+
+Openpose_Parameters: /home/skaegy/Projects/Cplus_Project/ORB_Tracking/Examples/Openpose_params.yml
+
+# Whether detect human pose (0 for no, 1 for yes)
+
+is_DetectHuman: 1
 
 
