most informative pose

--- a/Examples/Setting.yaml
+++ b/Examples/Setting.yaml
@@ -9,7 +9,7 @@
 # "rtmp://localhost/myapp/mystream"
 # /dev/video3
 
-Video_source: "rtsp://127.0.0.1:8554/test"
+Video_source: /dev/video3
 
 # the Orb Vocabulary File Path. Either .bin File or .txt File is Ok.
   
@@ -17,11 +17,11 @@ Orb_Vocabulary: /home/skaegy/Projects/Cplus_Project/ORB_Tracking/Vocabulary/ORBv
 
 # the Camera Setting File Path. 
 
-Cam_Setting: /home/skaegy/Projects/Cplus_Project/ORB_Tracking/Examples/ORB_RGB640x480.yaml
+Cam_Setting: /home/skaegy/Projects/Cplus_Project/ORB_Tracking/Examples/ORB_RGBD640x480.yaml
 
 # Whether Run the ORB-SLAM2 System Using the Exsiting Map File (0 for no , 1 for yes).
 
-is_ReuseMap: 0
+is_ReuseMap: 1
 
 # the Exsiting Map File Path (if the above item is 0, this is unnessesary)
 
@@ -29,7 +29,7 @@ ReuseMap: /home/skaegy/Projects/Cplus_Project/ORB_Tracking/Examples/Monocular/Sl
 
 # Whether detect human pose (0 for no, 1 for yes)
 
-is_DetectHuman: 0
+is_DetectHuman: 1
 
 # the Openpose parameters File Path
 
