--- a/Examples/ORB_RGBD640x480.yaml
+++ b/Examples/ORB_RGBD640x480.yaml
@@ -5,10 +5,14 @@
 #--------------------------------------------------------------------------------------------
 
 # Camera calibration and distortion parameters (OpenCV) 
-Camera.fx: 618.738
-Camera.fy: 618.296
-Camera.cx: 324.929
-Camera.cy: 241.133
+#Camera.fx: 618.738
+#Camera.fy: 618.296
+#Camera.cx: 324.929
+#Camera.cy: 241.133
+Camera.fx: 309.369
+Camera.fy: 309.148
+Camera.cx: 214.465
+Camera.cy: 120.566
 
 Camera.k1: 0.000000
 Camera.k2: 0.000000
@@ -16,11 +20,11 @@ Camera.p1: 0.000000
 Camera.p2: 0.000000
 Camera.k3: 0.000000
 
-Camera.width: 640
-Camera.height: 480
+Camera.width: 424
+Camera.height: 240
 
 # Camera frames per second 
-Camera.fps: 15.0
+Camera.fps: 30
 
 # IR projector baseline times fx (aprox.)
 Camera.bf: 40.0
@@ -32,7 +36,7 @@ Camera.RGB: 1
 ThDepth: 40.0
 
 # Deptmap values factor 
-DepthMapFactor: 5000.0
+DepthMapFactor: 1000.0
 
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
