--- a/Examples/ORB_RGB640x480.yaml
+++ b/Examples/ORB_RGB640x480.yaml
@@ -22,12 +22,16 @@ Camera.fps: 30.0
 # Color order of the images (0: BGR, 1: RGB. It is ignored if images are grayscale)
 Camera.RGB: 1
 
+Camera.width: 640
+Camera.height: 480
+Camera.Z: 1
+
 #--------------------------------------------------------------------------------------------
 # ORB Parameters
 #--------------------------------------------------------------------------------------------
 
 # ORB Extractor: Number of features per image
-ORBextractor.nFeatures: 1000
+ORBextractor.nFeatures: 1500
 
 # ORB Extractor: Scale factor between levels in the scale pyramid 	
 ORBextractor.scaleFactor: 1.2
@@ -49,12 +53,15 @@ Viewer.KeyFrameSize: 0.05
 Viewer.KeyFrameLineWidth: 1
 Viewer.GraphLineWidth: 0.9
 Viewer.PointSize: 5
-Viewer.CameraSize: 0.08
+Viewer.CameraSize: 0.1
 Viewer.CameraLineWidth: 3
 Viewer.ViewpointX: 0
-Viewer.ViewpointY: -0.7
-Viewer.ViewpointZ: -1.8
+Viewer.ViewpointY: -3.0
+Viewer.ViewpointZ: -0.1
 Viewer.ViewpointF: 500
+Viewer.TrjHistory: 10
+Viewer.WindowSizeX: 1080.0
+Viewer.WindowSizeY: 1920.0
 
 #--------------------------------------------------------------------------------------------
 # ARUCO Parameters
