update load image version & visualitzation

--- a/Examples/ORB_RGBD640x480.yaml
+++ b/Examples/ORB_RGBD640x480.yaml
@@ -13,6 +13,16 @@ Camera.cy: 241.133
 #Camera.fy: 309.148
 #Camera.cx: 214.465
 #Camera.cy: 120.566
+#Camera.fx: 677.322
+#Camera.fy: 604.246
+#Camera.cx: 318.957
+#Camera.cy: 297.472
+
+#Camera.k1: 0.1081
+#Camera.k2: -0.0793
+#Camera.p1: 0.01169
+#Camera.p2: 0.0018
+#Camera.k3: 0.000000
 
 Camera.k1: 0.000000
 Camera.k2: 0.000000
@@ -22,19 +32,19 @@ Camera.k3: 0.000000
 
 Camera.width: 640
 Camera.height: 480
-Camera.Z: 0.4
+Camera.Z: 0.7
 
 # Camera frames per second 
 Camera.fps: 30
 
 # IR projector baseline times fx (aprox.)
-Camera.bf: 3.0
+Camera.bf: 33.0
 
 # Color order of the images (0: BGR, 1: RGB. It is ignored if images are grayscale)
 Camera.RGB: 1
 
 # Close/Far threshold. Baseline times.
-ThDepth: 40.0
+ThDepth: 20.0
 
 # Deptmap values factor 
 DepthMapFactor: 1000.0
@@ -44,19 +54,19 @@ DepthMapFactor: 1000.0
 #--------------------------------------------------------------------------------------------
 
 # ORB Extractor: Number of features per image
-ORBextractor.nFeatures: 1000
+ORBextractor.nFeatures: 2000
 
 # ORB Extractor: Scale factor between levels in the scale pyramid 	
-ORBextractor.scaleFactor: 1.2
+ORBextractor.scaleFactor: 1.5
 
 # ORB Extractor: Number of levels in the scale pyramid	
-ORBextractor.nLevels: 8
+ORBextractor.nLevels: 4
 
 # ORB Extractor: Fast threshold
 # Image is divided in a grid. At each cell FAST are extracted imposing a minimum response.
 # Firstly we impose iniThFAST. If no corners are detected we impose a lower value minThFAST
 # You can lower these values if your images have low contrast			
-ORBextractor.iniThFAST: 7
+ORBextractor.iniThFAST: 15
 ORBextractor.minThFAST: 3
 
 #--------------------------------------------------------------------------------------------
@@ -66,13 +76,13 @@ Viewer.KeyFrameSize: 0.05
 Viewer.KeyFrameLineWidth: 1
 Viewer.GraphLineWidth: 0.9
 Viewer.PointSize: 5
-Viewer.CameraSize: 0.1
-Viewer.CameraLineWidth: 3
+Viewer.CameraSize: 0.2
+Viewer.CameraLineWidth: 2
 #Viewer.ViewpointX: 0
 #Viewer.ViewpointY: -0.7
 #Viewer.ViewpointZ: -1.8
 Viewer.ViewpointX: 0
-Viewer.ViewpointY: -4.0
+Viewer.ViewpointY: -6
 Viewer.ViewpointZ: -0.1
 Viewer.ViewpointF: 500
 Viewer.TrjHistory: 10
