--- a/Examples/Setting.yaml
+++ b/Examples/Setting.yaml
@@ -26,11 +26,11 @@ is_ReuseMap: 1
 
 # the Exsiting Map File Path (if the above item is 0, this is unnessesary)
 
-ReuseMap: /home/skaegy/Projects/Cplus_Project/ORB_Tracking/Examples/Monocular/Map_RGBD_Huxley307_2.bin
+ReuseMap: /home/skaegy/Projects/Cplus_Project/ORB_Tracking/Examples/Monocular/Map_RGBD_BSN_light.bin
 #Map_RGB_Huxley307
 # Load Image Path (While using Load_Image program)
 
-LoadImagePath: /media/skaegy/USB-IROS-GY/Demo_OPSLAM
+LoadImagePath: /media/skaegy/Seagate Backup Plus Drive/Data/RGBD_skeleton/20180911/Yao_stay_normal1
 
 # Whether detect human pose (0 for no, 1 for yes)
 
