--- a/Examples/Openpose_params.yml
+++ b/Examples/Openpose_params.yml
@@ -7,11 +7,15 @@ net_resolution_row: 160
 net_resolution_col: 80
 output_resolution_row: -1
 output_resolution_col: -1
+num_gpu: 1
 num_gpu_start: 0
 scale_number: 1
 scale_gap: 0.3
-render_threshold: 0.2
-alpha_pose: 0.01
+render_threshold: 0.05
+alpha_pose: 0.5
+op_tracking: 1
+number_people_max: 1
+part_to_show: 0
 
 # Camera intrinsic parameters
 Camera.fx: 618.738
