--- a/Examples/Openpose_params.yml
+++ b/Examples/Openpose_params.yml
@@ -3,8 +3,8 @@
 logging_level: 3
 model_pose: BODY_25
 model_folder: /home/skaegy/Github/openpose/models/
-net_resolution_row: 160
-net_resolution_col: 80
+net_resolution_row: 640
+net_resolution_col: 480
 output_resolution_row: -1
 output_resolution_col: -1
 num_gpu: 1
@@ -18,6 +18,8 @@ number_people_max: 1
 part_to_show: 0
 
 # Camera intrinsic parameters
+Camera.width: 640
+Camera.height: 480
 Camera.fx: 618.738
 Camera.fy: 618.296
 Camera.cx: 324.929
